--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-minimal
+title: PPC Training and Academy
+description: The essential knowledge topics for product and platform teams.
+logo: /img/slasscom-logo.png
