--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: PPC Academy
+title: Product & Platform Council (PPC)
 description: This learn portal consists of a collection of essential topics for teams building digital products of platforms. The topics here are curated through volunteering efforts of industry professionals.
 logo: /img/slasscom-logo.png
