--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Product & Platform Council (PPC)
-description: This learn portal consists of a collection of essential topics for teams building digital products of platforms. The topics here are curated through volunteering efforts of industry professionals.
+description: The Product and Platform Council, an initiative by [SLASSCOM](http://slasscom.lk),  operates with the vision to develop capability that would enable Sri Lankan enterprises to create high tech products and platforms to attract global demand. /r/n <br/> This learning portal is a part of PPC Training and Academy to provide the essential knowledge required to build such products and platforms.This learn portal consists of a collection of essential topics for teams building digital products of platforms. The topics here are curated through volunteering efforts of industry professionals.
 logo: ./img/slasscom-logo-2.png
