--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: "Alasscom"
+title: "SLASSCOM"
 email: wowthemesnet@gmail.com
 timezone: UTC
-baseurl: "/slasscom"
+baseurl: "/ppc-academy"
 permalink: "/:title/"
 logo: 'assets/images/logo.png'
 footer_logo: 'assets/images/footer-logo.png'
